--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <body>
         <div id="ask" class="container">
             <div >
-                <h1 class = "header_text">Cumartesi günü dışarı çıkalım mı</h1>
+                <h1 class = "header_text">Cumartesi günü dışarı çıkalım mı?</h1>
             </div>
             <div class="gif_container">
                 <img src="image/ask.jpg" alt="Cute animated illustration">
